added styles to html

--- a/gs.css
+++ b/gs.css
@@ -14,7 +14,7 @@
     font-family: 'Times New Roman', Times, serif;
     font-size: 15px;
     color: black;
-    background-color: lightblue;
+    background-color: lightcyan;
 }
 
 .name {
@@ -35,7 +35,7 @@
     background-color: lightpink;    
 }
 
-.liela {
+.leila {
     font-family: 'Times New Roman', Times, serif;
     font-size: 15px;
     color: black;
