--- a/gs.css
+++ b/gs.css
@@ -63,3 +63,22 @@
     background-color: lightgrey;
 }
 
+table {
+    border: 1px solid black;
+    margin-left: 400px;
+    margin-top: 50px;
+}
+
+th {
+    border: 1px solid black;
+    background-color: lavender;
+    padding: 5px;
+}
+
+td {
+    border: 1px solid black;
+    padding: 5px;
+    text-align: left;
+}
+
+tr:nth-child(odd) {background-color: lightgray;}
