--- a/gs.css
+++ b/gs.css
@@ -63,6 +63,27 @@
     background-color: lightgrey;
 }
 
+.phyl {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 15px;
+    color: black;
+    background-color: lightgoldenrodyellow;
+}
+
+.lord-mount {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 15px;
+    color: black;
+    background-color: lightgreen;
+}
+
+.lord-toll {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 15px;
+    color: black;
+    background-color: lightskyblue;
+}
+
 table {
     border: 1px solid black;
     margin-left: 400px;
