--- a/gs.css
+++ b/gs.css
@@ -116,3 +116,33 @@ tr:nth-child(odd) {background-color: lightgray;}
     text-shadow: 3px 3px 3px grey;
     border: 3px solid black;
 }
+
+
+ul {
+    list-style-type: none;
+    margin-top: 20px;
+    padding: 0;
+    overflow: hidden;
+    background-color: gray;
+  }
+  
+  .nav-item-next {
+    float: right;
+  }
+
+  .nav-item-prev {
+    float: left;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover {
+    background-color: #111;
+  }
+  
